Finished items in project

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <h1>My Baby's delicious Banana Bread</h1>
+    <img src="bananabread.png" alt="warm banana bread">
+
+    <p>In the Section we will be discussing how to create my baby's delicous banana bread. When biting into ths bread you
+     will feel a surge of euphoria jolting through your body as if you were enveloped by and angel. enjoy</p>
+
+<h4>List of ingrediants you will need</h4>
+
+<ul>
+    <li>2 Cups of Flour</li>
+    <li>1/2 Dark Brown Sugar</li>
+    <li>1/4 Sugar</li>
+    <li>1 Tsp Baking Soda</li>
+    <li>1/2 Tsp Salt</li>
+    <li>1/2 Tsp Cinnamon</li>
+    <li>3 Whole ass ripe bananas</li>
+    <li>2 MF eggs</li>
+    <li>1 Tsp of vanilla</li>
+    <li>1/2 Veggie oil</li>
+</ul>
+<h4>Instructions on how to make the delicious bread</h4>
+
+<ol>
+    <li>Preheat oven to 350 degrees F</li>
+    <li>Combine dry ingrediants</li>
+    <li>Combine butter and sugar in bowl, then add eggs & vanilla and mix well</li>
+    <li>Add dry ingrediants and the previous mix together</li>
+    <li>Pour into prepared loaf pan</li>
+    <li>Cook for 60 minutes</li>
+</ol>
+
+
+
+
+
+
 </body>
+
 </html>
+
+
+<a href="../index.html">Return To Menu</a>
