--- a/recipes/never-been-feta.html
+++ b/recipes/never-been-feta.html
@@ -8,8 +8,49 @@
 </head>
 
 <body>
-<h1>The Famous Never Been Feta Burger</h1>
-<img src="bobsburgers.png" alt="Bobs family from bobs bobsburgers">
+    <h1>The Famous Never Been Feta Burger</h1>
+  
+    <img src="bobsburgers.png" alt="Bobs family from bobs bobsburgers">
+        
+    <p>In this section we will be going over how to make the delicous Never Been Feta Burger from Bob's Burgers</p>
+
+
+    <h4>List of Ingrediants</h4>
+    <ul>
+        <li>QP of Crumbled Feta</li>
+        <li>1 Lb of ground beef</li>
+        <li>1/2 Cup Yellow Mustard</li>
+        <li>1/4 Cup Mayonaise</li>
+        <li>4 Small Ciabatta Rolls up in dis bih</li>
+        <li>Arugula</li>
+        <li>Sriracha (optional)</li>
+    </ul>
+
+    <h4>Detailed List on how to prepare the sandwhich</h4>
+
+    <ol>
+        <li>Mix 3/4 cup feta with the beef and form 4 patties</li> 
+        <li>Cook them to your preference</li>
+        <li>Mix the mustard and the mayonaise together in a small bowl</li>
+        <li>Spread this on the tops of the rolls</li>
+        <li>Put arugula on bottom part of roll (don't be scared)</li>
+        <li>Then the burger</li>
+        <li>Then more feta</li>
+        <li>Then the Sriracha</li>
+        <li>Eat the delicousness</li>
+    </ol>
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
+
+
+<a href="../index.html">Return To Menu</a>
