--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>Recipes of Deception</h1>
-    <img src="terrycrews.jpg" alt="The Deception">
+    <img src="terrycrews.jpg"alt="The Deception">
+    <img src="trickeddeceived.gif" alt="">
     <ul>
 
         <li><a href="recipes/lasagna.html">lasagna</a></li>
